--- a/AIUBStudent/app/src/main/res/values/strings.xml
+++ b/AIUBStudent/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="share_card_view_message_in_dashboard">Do you find \'AIUB-Student\' helpful? if yes, Share the app with your AIUBian friends.</string>
     <string name="share_card_view_message_title_in_dashboard"><![CDATA[Ultimately! it\'s all about love & friendship]]></string>
+    <string name="warning_title">Warning</string>
+    <string name="warning_message">Do you want to Exit.</string>
+    <string name="no">NO</string>
+    <string name="yes">YES</string>
 
 
     <!--    for RecyclerView-->
