--- a/AIUBStudent/app/src/main/res/values/strings.xml
+++ b/AIUBStudent/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="warning_message">Do you want to Exit.</string>
     <string name="no">NO</string>
     <string name="yes">YES</string>
+    <string name="internet_connection_title">Oops! No Internet Connection</string>
+    <string name="internet_connection_message">Check your network settings and try again.</string>
+    <string name="loading">Loading...</string>
+    <string name="loading_message">Wait Please</string>
 
 
     <!--    for RecyclerView-->
