final commit for AIUBStudent.apk version 1.0

--- a/AIUBStudent/app/src/main/res/values/strings.xml
+++ b/AIUBStudent/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="loading">Loading...</string>
     <string name="loading_message">Wait Please</string>
     <string name="link_subject">AIUB-Student</string>
-    <string name="link">https://github.com/Arafat6462/Android-application</string>
+    <string name="link">https://github.com/Arafat6462/Android-application/blob/main/AIUB%20Student.apk</string>
     <string name="share">Share</string>
 
 
